--- a/frontend_end_user/src/styles/MenuPage.css
+++ b/frontend_end_user/src/styles/MenuPage.css
@@ -10,10 +10,10 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000; /* Make sure it appears above other content */
-  background-color: #fff; /* You can change the background color if needed */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional, for shadow effect */
-  padding: 10px 20px; /* Adjust the padding as needed */
+  z-index: 1000; 
+  background-color: #fff; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+  padding: 10px 20px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -131,6 +131,10 @@
   background-color: #ff6347;
 }
 
+.letter-items {
+  position: relative; /* Ensure the parent has position: relative if using absolute */
+  top: -5px; /* Adjust the value as needed */
+}
 .orders-button {
   display: flex;
   align-items: center;
@@ -143,6 +147,21 @@
   font-size: 16px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+}
+.cart-button {
+  display: flex;
+  align-items: center;
+  background-color:#ff6347;
+  color: white;
+  padding: 12px 18px;
+  margin-left: 10px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 12px;
 }
 
 .orders-button .react-icons {
@@ -228,7 +247,7 @@
 /* Responsive styles */
 @media (max-width: 768px) {
   .nav-links {
-    flex-direction: column; /* Stack links vertically */
+    flex-direction: row; /* Stack links vertically */
     align-items: flex-start; /* Align links to the left */
     gap: 10px; /* Reduce space between links */
     margin-left: 0; /* Reset left margin */
