--- a/frontend_end_user/src/styles/MenuItemCard.css
+++ b/frontend_end_user/src/styles/MenuItemCard.css
@@ -7,14 +7,14 @@
   background-color: #fff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
-  width: 100%; /* Make cards take full width on smaller screens */
-  max-width: 250px; /* Limit maximum width for larger screens */
+  width: 350px; /* Make cards take full width on smaller screens */
+  max-width: 400px; /* Limit maximum width for larger screens */
   box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
 
 @media (max-width: 768px) { /* Adjust breakpoint as needed */
   .menu-item-card {
-    margin-bottom: 15px; /* Add vertical spacing between cards on smaller screens */
+    max-width: 400px; /* Limit maximum width for larger screens */
   }
 
   .food-name {
@@ -50,7 +50,7 @@
 
 @media (max-width: 480px) { /* Further adjustments for smaller screens */
   .menu-item-card {
-    max-width: 100%; /* Cards take full container width */
+    max-width: 400px; /* Limit maximum width for larger screens */
   }
 
   .food-image {
@@ -169,4 +169,3 @@
   color: #333;
   font-weight: bold;
 }
-
