--- a/frontend_end_user/src/styles/MenuPage.css
+++ b/frontend_end_user/src/styles/MenuPage.css
@@ -237,7 +237,8 @@
   .nav-links {
     display: flex; /* Ensure nav-links are in a flex container */
     gap: 5px; /* Reduce gap between links */
-    margin-right: 10px; /* Add some margin to the right */
+    margin-right: 5px; /* Add some margin to the right */
+    padding-left: 80px;
   }
 
   .nav-link {
