--- a/frontend_restaurant_admin/src/styles/Orders.css
+++ b/frontend_restaurant_admin/src/styles/Orders.css
@@ -6,6 +6,7 @@
   gap: 20px;
   background-color: #eef2f5;
   box-sizing: border-box;
+  justify-content: center; /* Center vertically */
 }
 
 .orders-list {
@@ -30,4 +31,22 @@
 
 .orders-list::-webkit-scrollbar-thumb:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Ensures the spinner container takes full height */
+  min-height: 300px; /* Optionally set a minimum height for small content areas */
+}
+
+
+@keyframes fadeIn {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
